--- a/content/posts/2019-02-09.md
+++ b/content/posts/2019-02-09.md
@@ -23,37 +23,40 @@ Continuing with the Greek, the woman doesn't just cry but rains down tears on hi
 
 What would have made this woman act so improperly? Why did she abandon herself in such an extravagant way? Did something about Jesus' feet set her off? I think this is the key. Here is something from the Book of Isaiah:
 
-| Awake, awake!
-| Clothe yourself in your strength, Zion.
-| Put on your richest clothes, Jerusalem, holy city;
-| since the unclean shall no longer enter you.
-| Shake off your dust; get to your feet, captive Jerusalem!
-| Free your neck from its chains, captive daughter of Zion.
-| For the Lord says this: You were sold for nothing and you will be redeemed without money.
-| ...
-| How beautiful on the mountains are the feet of him who brings good news,
-| Who heralds peace, brings happiness, proclaims salvation
-| and tells Zion, “Your God is king!”
+```
+Awake, awake!
+Clothe yourself in your strength, Zion.
+Put on your richest clothes, Jerusalem, holy city;
+since the unclean shall no longer enter you.
+Shake off your dust; get to your feet, captive Jerusalem!
+Free your neck from its chains, captive daughter of Zion.
+For the Lord says this:
+You were sold for nothing and you will be redeemed without money.
+...
+How beautiful on the mountains are the feet of him who brings good news,
+Who heralds peace, brings happiness, proclaims salvation
+and tells Zion, “Your God is king!”
 
 [Isaiah 52.1-7 JB (adapted)]
+```
 
 I think it was the feet of him who brings good news that brought her undone. It was the message that Jesus proclaimed that made her break down. It was the Gospel of peace, happiness, and salvation that made her weep uncontrollably. Maybe she had been sold for nothing, had been made to feel utterly worthless. Now she was being redeemed without money by the One who is happy to be her king.
 
 ---
 
-Now let's get back to Luke's Gospel. How did Simon react to all this?
+Let's get back to Luke's Gospel. How did Simon react to all this?
 
-> When the Pharisee who had invited him saw this, he said to himself, 'If this man were a prophet, he would know who this woman is that is touching him and what a bad name she has'. Then Jesus took him up and said, 'Simon, I have something to say to you'. 'Speak, Master' was the reply. 'There was once a creditor who had two men in his debt; one owed him five hundred denarii, the other fifty. They were unable to pay, so he pardoned them both. Which of them will love him more?' 'The one who was pardoned more, I suppose' answered Simon. Jesus said, 'You are right'.
+> When the Pharisee who had invited him saw this, he said to himself, 'If this man were a prophet, he would know who this woman is that is touching him and what a bad name she has'. Then Jesus took him up and said, 'Simon, I have something to say to you'. 'Speak, Master' was the reply. 'There was once a creditor who had two men in his debt; one owed him five hundred denarii, the other fifty. They were unable to pay, so he pardoned them both. Which of them will love him more?' 'The one who was pardoned more, I suppose' answered Simon. Jesus said, 'You are right'. [Luke 7.39-43 JB]
 
 This is where we find out that the host's name is Simon. He does not react in the same way as the woman. Instead, he thinks to himself that Jesus must be a fake. After all, if he was a prophet, surely he would know what kind of woman is touching him. I'm sad to say that I have more in common with Simon than the woman. That's exactly the kind of attitude I would have, and I would probably say the same thing to myself.
 
-This is where things might have started to change for Simon, and where things can start to change for people like me who are more like Simon than the woman. Somehow Jesus knows what Simon is thinking, but Simon doesn't know that yet. It might have taken him a while to realise it. Anyway, Jesus says "Simon, I have something to say to you." Then he tells a little story, a parable about two people in debt. One owes the rich guy fifty day's wages and the other one owes him five hundred day's wages. (That's a lot!) The rich guy decides to cancel both debts. Who's going to like him more?
+This is where things might have started to change for Simon, and where things can start to change for people like me who are more like Simon than the woman. Somehow Jesus knows what Simon is thinking, but Simon doesn't know that yet. It might have taken him a while to realise it. Anyway, Jesus says "Simon, I have something to say to you." Then he tells a little story, a parable about two people in debt. One owes the rich guy fifty day's wages and the other one owes him five hundred day's wages. (That's a lot!) The rich guy decides to cancel both debts. Who's going to like him more? Simon says "That's easy, the one who owes him more". (Luke doesn't actually say that Simon said "That's easy".)
 
-Simon says "That's easy, the one who owes him more" and Jesus says "You are right." Simon probably feels good about getting it right but the feeling doesn't last long because Jesus turns to the woman and begins to speak about what just happened:
+Then Jesus says "You are right." Simon probably feels good about getting it right but the feeling doesn't last long because Jesus turns to the woman and begins to speak about what just happened:
 
-> 'Simon,' he said 'do you see this woman? I came into your house, and you poured no water over my feet, but she has poured out her tears over my feet and wiped them away with her hair. You gave me no kiss, but she has been covering my feet with kisses ever since I came in. You did not anoint my head with oil, but she has anointed my feet with perfume. For this reason I tell you that her sins, her many sins, have been forgiven her, for which she has shown such great love. It is the man who is forgiven little who shows little love. Then he said to her, 'Your sins are forgiven'. Those who were with him at table began to say to themselves, 'Who is this man, that he even forgives sins?' But he said to the woman, 'Your faith has saved you; go in peace'.
+> 'Simon,' he said 'do you see this woman? I came into your house, and you poured no water over my feet, but she has poured out her tears over my feet and wiped them away with her hair. You gave me no kiss, but she has been covering my feet with kisses ever since I came in. You did not anoint my head with oil, but she has anointed my feet with perfume. For this reason I tell you that her sins, her many sins, have been forgiven her, for which she has shown such great love. It is the man who is forgiven little who shows little love. Then he said to her, 'Your sins are forgiven'. Those who were with him at table began to say to themselves, 'Who is this man, that he even forgives sins?' But he said to the woman, 'Your faith has saved you; go in peace'. [Luke 7.44-50 JB (adapted)]
 
-At this point Simon could have gone two ways. He could have continued with his self righteous attitude and decided that Jesus was not only a fake but someone who had just said something really bad because by pronouncing forgiveness he made himself equal to God. He could have gone another way too, a narrow way that not many take. He could have begun to think that Jesus is the messenger with beautiful feet who Isaiah was talking about -- the Messiah, the Christ. Which way did Simon go, and which way will we go?
+At this point Simon could have gone two ways. He could have continued with his self righteous attitude and decided that Jesus was not only a fake but someone who had just said something really bad because by pronouncing forgiveness he made himself equal to God. He could have gone another way too, a narrow way that not many take. He could have begun to think that Jesus is the messenger with beautiful feet who Isaiah talked about -- the Messiah. Which way did Simon go, and which way will we go?
 
 Luke, who wrote this down for us, used to travel with Paul (the same Paul who wrote about half of the New Testament). During his travels, which included a visit to Jerusalem, Luke had the opportunity to talk to people about what happened when Jesus was walking and talking in Israel. I have a feeling that this account about the woman and Simon is from one of those two. Maybe Luke met one of them and got the story first hand?
 
