--- a/content/posts/2019-02-23.md
+++ b/content/posts/2019-02-23.md
@@ -25,7 +25,7 @@ A bit later, Luke says this:
 
 What does this mean? It's always a good idea to look at the context when interpreting the Bible, and the context here is a Passover meal. Before we look at the Passover meal, tell me what things you remember when you think of Jesus and bread.
 
-You will be glad to know that I am not going to go through everything to do with Jesus and bread tonight. Instead we will just look at a few.
+You will be glad to know that I am not going to go through everything to do with Jesus and bread tonight. Instead we will just look at something called *matzo*.
 
 ## The Passover meal
 
