--- a/content/posts/2019-03-30.md
+++ b/content/posts/2019-03-30.md
@@ -9,6 +9,8 @@ The Passover meal has four cups of wine but we will only have two cups tonight. 
 
 I'm going to try to make this short. My dear mother, Dorothy Finney, used to tell me that the best preacher she ever heard was a man named Bill Young. (She heard a lot of preachers in her life.) Bill Young was known as a prince among preachers. Mum said that his messages didn't go longer than fifteen minutes and that they were unforgetable. My beautiful wife Eliane dearly hopes that I will be like Bill Young one day.
 
+![Edna and Bill Young](/images/Edna_and_Bill_Young.jpg)
+
 ## Why four cups?
 
 Why does the Passover Meal have four cups of wine? The *Mishnah* is a collection of Jewish teaching, and it associates the four cups with four acts that God promises in Exodus 6.6-7:
