2019-03-30 add picture caption

--- a/content/posts/2019-03-30.md
+++ b/content/posts/2019-03-30.md
@@ -9,7 +9,7 @@ The Passover meal has four cups of wine but we will only have two cups tonight. 
 
 I'm going to try to make this short. My dear mother, Dorothy Finney, used to tell me that the best preacher she ever heard was a man named Bill Young. (She heard a lot of preachers in her life.) Bill Young was known as a prince among preachers. Mum said that his messages didn't go longer than fifteen minutes and that they were unforgetable. My beautiful wife Eliane dearly hopes that I will be like Bill Young one day.
 
-![Edna and Bill Young](/images/Edna_and_Bill_Young.png "Edna and Bill Young")
+![Edna and Bill Young](/images/Edna_and_Bill_Young.png)
 
 ## Why four cups?
 
