--- a/content/posts/2019-04-20.md
+++ b/content/posts/2019-04-20.md
@@ -1,21 +1,83 @@
 ---
 title: "The Sign of Jonah"
-date: '2019-04-20'
+output:
+  html_document:
+    df_print: paged
+date: '2019-04-19'
 ---
 
-Intro
+Thank you all for being here. Today I'd like to talk about the Easter holidays. I'm not going to talk about these Easter holidays but about the original Easter holy days, three days that changed everything.
+
+## Give us a sign
+
+In chapter twelve of Matthew's Gospel we find Jesus in a dispute with the religious authorities. Here's how it happenend:
+
+> Then a demon-possessed man who was blind and mute was brought to Jesus, and He healed him, so that the mute man spoke and saw. All the crowds were amazed, and were saying, “This man cannot be the Son of David, can he?” But when the Pharisees heard this, they said, “This man casts out demons only by Beelzebul the ruler of the demons.”
+
+[Matt 12.22-24 NASB]
+
+Jesus responds by asking them some questions including this one: *If I cast out demons by Beelzebul, by whom do your sons cast them out?* Then he warns them not to slander the work of the Holy Spirit, because doing that puts them beyond forgiveness. Finally he warns them to be careful about what they say because *by your words you will be justified, and by your words you will be condemned.*
+
+At this point they change their approach and ask Jesus to give them a sign.
+
+A sign of what?
+
+If you remember what got the authorities bothered, it was when the people started asking whether Jesus could be the Son of David. When they say *Son of David* they aren't talking about Solomon or some other old king. They are talking about the Messiah, the one whose kingdom will never end. So what those scribes and Pharisees wanted was a sign that Jesus is the Messiah, the Son of the Living God. Here's what Matthew says:
+
+> Then some of the scribes and Pharisees said to Him, “Teacher, we want to see a sign from You.” But He answered and said to them, “An evil and adulterous generation craves for a sign; and yet no sign will be given to it but the sign of Jonah the prophet; for just as Jonah was three days and three nights in the belly of the sea monster, so will the Son of Man be three days and three nights in the heart of the earth.
+
+[Matt 12.38-40 NASB]
+
+## The sign of Jonah
+
+Those people would have known about Jonah, how God told him to preach to the people of Nineveh; how he took off in a ship to the other side of the known world to escape his duty; how God sent a massive storm; how the pagan sailors cast lots, which pointed to Jonah; how he said they had better throw him into the sea; how the sailors tried hard to row back to land; how they finally sacrificed him; how the sea grew calm; and how the sailors then worshipped the God of the Hebrews.
+
+That is just the start of Jonah's story. We know that he was swallowed by a whale and spent days inside it. He was deep in the world of the dead with seaweed wrapped around his head. He called out to God, who made the whale vomit next to the beach. Then Jonah went and told the people in Nineveh to repent and they repented in a big way. God forgave those people, which made Jonah get really mad. Here's how he prayed:
+
+> Our LORD, I knew from the very beginning that you wouldn't destroy Nineveh. That's why I left my own country and headed for Spain. You are a kind and merciful God, and you are very patient. You always show love, and you don't like to punish anyone, not even foreigners.
+
+[Jonah 4.2 CEV]
+
+Next Jonah made a shelter outside Nineveh and sat watching to see what would happen. A nice shady vine sprung but then it died and Jonah got sun stroke. Jonah told God, "I'm angry enough to die!" Then God replied with these unforgettable words:
+
+> You are only upset about a plant which cost you no labour, which you did not make grow, which sprouted in a night and has perished in a night. Am I not to feel sorry for Nineveh in which there are more than a hundred and twenty thousand people who cannot tell their right hand from their left, to say nothing of the animals?
+
+[Jonah 4.10-11 JB]
+
+So what's all this got to do with a sign that would demonstrate that Jesus really is the Son of David? It's obvious to us but only in hindsight. If we were there we would have been wondering what on earth Jesus was talking about when he talked about the sign of Jonah and being in the heart of the earth for three days.
 
 ## The first day
 
-...
+The first day was a Friday, what we now call Good Friday. Just as Jonah was sacrificed, so was Jesus. The sailors who sacrificed Jonah did so with his permission. The people who put Jesus to death were less noble, but he let them do it. He could have called on legions of angels to rescue him from his torturers, but instead he chose to go through the horrors of crucifixion. On that Friday the Lamb of God gave his life to rescue us.
+
+No one can adequately describe what Jesus achieved through his sacrifice. All we can do is try to express aspects of what Jesus achieved, as Charles Wesley does in one of his hymns:
+
+> And can it be, that I should gain
+
+> An interest in the Saviour’s blood?
+
+> Died he for me who caused his pain
+
+> For me who him to death pursued.
+
+> Amazing love, how can it be
+
+> That you my God should die for me?
+
+There was a crowd there when Jesus died. Some were there to hurl abuse. Others were friends and followers. Perhaps the most pitiful group were the women who had followed all the way from Galilee to provide for Jesus. Among these women were the three Marys: Mary, mother of Jesus; Mary Magdalene, from whom Jesus had driven out seven demons; and Mary wife of Clopas. A very early church historian called Hegesippus says that Clopas was Joseph's brother. That would make this Mary Jesus' aunty, though not by blood. They watched helpless as Jesus went through the agonies of death on a cross.
+
+Here's Luke's account of the final events of that Friday, as given in Richard K. Moore's *Under the Southern Cross* translation:
+
+> Now it was already about midday when darkness fell over the whole country until three in the afternoon, while the sun was eclipsed. The curtain of the Temple sanctuary was split right down the middle. Then, after uttering a loud cry, Jesus said, 'Father, into your hands I entrust my spirit.' Having said that , he breathed his last. After the centurion had seen what happened, he gave glory to God, saying, 'Without any doubt this person was innocent.'
+
+> And all the crowds who had gathered for this spectacle, after seeing what happened, made their way back, thumping their chests. All his acquaintances stood at a distance to watch these events, including the women who had accompanied him from Galilee.
+
+> Now there was a man by the name of Joseph, who was a Councillor and a good and upright man who hadn't agreed with their decision or its implementation. He hailed from Arimathea, a Judean town, and lived in expectation of God's kingdom. He went to see Pilate, asked for Jesus' corpse, and after taking it down, wrapped it in linen and placed it in a tomb hewn out of rock in which no-one had as yet been laid.
+
+[Luke 23.44-53 USC]
+
+As in Jonah, a man was sacrificed to rescue others. As in Jonah, pagan's gave glory to the God of the Hebrews. As in Jonah, Jesus went into the world of the dead.
 
 ## The second day
 
-...
-
-## The third day
-
-...
-
-
-God bless you. Amen.
+The second day was a Saturday. 
