--- a/content/posts/2019-04-20.md
+++ b/content/posts/2019-04-20.md
@@ -3,6 +3,7 @@ title: "The Sign of Jonah"
 output:
   html_document:
     df_print: paged
+  word_document: default
 date: '2019-04-19'
 ---
 
@@ -10,7 +11,7 @@ Thank you all for being here. Today I'd like to talk about the Easter holidays. 
 
 ## Give us a sign
 
-In chapter twelve of Matthew's Gospel we find Jesus in a dispute with the religious authorities. Here's how it happenend:
+In chapter twelve of Matthew's Gospel we find Jesus in a dispute with the religious authorities. Here's how it happened:
 
 > Then a demon-possessed man who was blind and mute was brought to Jesus, and He healed him, so that the mute man spoke and saw. All the crowds were amazed, and were saying, “This man cannot be the Son of David, can he?” But when the Pharisees heard this, they said, “This man casts out demons only by Beelzebul the ruler of the demons.”
 
@@ -44,7 +45,7 @@ Next Jonah made a shelter outside Nineveh and sat watching to see what would hap
 
 [Jonah 4.10-11 JB]
 
-So what's all this got to do with a sign that would demonstrate that Jesus really is the Son of David? It's obvious to us but only in hindsight. If we were there we would have been wondering what on earth Jesus was talking about when he talked about the sign of Jonah and being in the heart of the earth for three days.
+So what's all this got to do with a sign that would demonstrate that Jesus really is the Son of David? If we were there we would be wondering what on earth Jesus was saying when he talked about the sign of Jonah and being in the heart of the earth. That's because we would not yet know about the three holy days of Easter.
 
 ## The first day
 
@@ -64,20 +65,96 @@ No one can adequately describe what Jesus achieved through his sacrifice. All we
 
 > That you my God should die for me?
 
-There was a crowd there when Jesus died. Some were there to hurl abuse. Others were friends and followers. Perhaps the most pitiful group were the women who had followed all the way from Galilee to provide for Jesus. Among these women were the three Marys: Mary, mother of Jesus; Mary Magdalene, from whom Jesus had driven out seven demons; and Mary wife of Clopas. A very early church historian called Hegesippus says that Clopas was Joseph's brother. That would make this Mary Jesus' aunty, though not by blood. They watched helpless as Jesus went through the agonies of death on a cross.
+There was a crowd there when Jesus died. Some were there to hurl abuse. Others were friends and followers. Perhaps the most pitiful group were the women who had followed all the way from Galilee to provide for Jesus. Among these women were the three Marys: Mary, mother of Jesus; Mary Magdalene, from whom Jesus had driven out seven demons; and Mary wife of Clopas. (See John 19.25.) A very early church historian called Hegesippus says that Clopas was Joseph's brother. That would make this Mary Jesus' aunty, though not by blood. They watched helpless as Jesus went through the agonies of death on a cross.
 
 Here's Luke's account of the final events of that Friday, as given in Richard K. Moore's *Under the Southern Cross* translation:
 
-> Now it was already about midday when darkness fell over the whole country until three in the afternoon, while the sun was eclipsed. The curtain of the Temple sanctuary was split right down the middle. Then, after uttering a loud cry, Jesus said, 'Father, into your hands I entrust my spirit.' Having said that , he breathed his last. After the centurion had seen what happened, he gave glory to God, saying, 'Without any doubt this person was innocent.'
+> Now it was already about midday when darkness fell over the whole country until three in the afternoon, while the sun was eclipsed. The curtain of the Temple sanctuary was split right down the middle. Then, after uttering a loud cry, Jesus said, 'Father, into your hands I entrust my spirit.' Having said that, he breathed his last.
 
-> And all the crowds who had gathered for this spectacle, after seeing what happened, made their way back, thumping their chests. All his acquaintances stood at a distance to watch these events, including the women who had accompanied him from Galilee.
+> After the centurion had seen what happened, he gave glory to God, saying, 'Without any doubt this person was innocent.' And all the crowds who had gathered for this spectacle, after seeing what happened, made their way back, thumping their chests. All his acquaintances stood at a distance to watch these events, including the women who had accompanied him from Galilee.
 
-> Now there was a man by the name of Joseph, who was a Councillor and a good and upright man who hadn't agreed with their decision or its implementation. He hailed from Arimathea, a Judean town, and lived in expectation of God's kingdom. He went to see Pilate, asked for Jesus' corpse, and after taking it down, wrapped it in linen and placed it in a tomb hewn out of rock in which no-one had as yet been laid.
+> Now there was a man by the name of Joseph, who was a Councillor and a good and upright man who hadn't agreed with their decision or its implementation. He hailed from Arimathea, a Judean town, and lived in expectation of God's kingdom. He went to see Pilate, asked for Jesus' corpse, and after taking it down, wrapped it in linen and placed it in a tomb hewn out of rock in which no-one had as yet been laid. It was the Day of Preparation and the Sabbath was about to begin.
 
-[Luke 23.44-53 USC]
+> The women who'd come from Galilee followed him and took note of the tomb and how his corpse had been laid; they then returned and prepared spices and perfumes.
 
-As in Jonah, a man was sacrificed to rescue others. As in Jonah, pagan's gave glory to the God of the Hebrews. As in Jonah, Jesus went into the world of the dead.
+[Luke 23.44-56 USC]
+
+John's Gospel tells us that Joseph of Arimathea was helped by another man. Do you know who it was? It was Nicodemus, the same one to whom Jesus said "What is born from human nature is human nature, and what is born from Spirit is spirit" [John 3.6 USC]. Jesus' body was carried to the tomb and put inside. Then a big rock was rolled across the entrance to close it.
+
+Looking back over the first holy day of Easter, we start to see why Jesus talked about the sign of Jonah. As in Jonah, a man was sacrificed to rescue others. As in Jonah, pagan's gave glory to God. Jonah compared the inside of the whale to the world of the dead. Jesus, who committed his spirit to God and whose dead body was now sealed in a tomb actually was in the world of the dead.
 
 ## The second day
 
-The second day was a Saturday. 
+The second day was the Sabbath. The Sabbath begins when the sun goes down on Friday and ends when the sun goes down on Saturday. The Sabbath is the seventh day. In obedience to the commandment, the women rested on the seventh day. They wanted to prepare Jesus' body with spices and perfume but had to wait.
+
+What was Jesus doing? He committed his spirit to God but his body was resting in the tomb. So where was he? A line in the [Apostle's Creed](https://en.wikipedia.org/wiki/Apostles'_Creed) says something about it:
+
+> I believe in Jesus Christ, God's only Son, our Lord,
+
+> who was conceived by the Holy Spirit,
+
+> born of the Virgin Mary,
+
+> suffered under Pontius Pilate,
+
+> was crucified, died, and was buried;
+
+> he descended to the dead.
+
+Where did they get the idea that Jesus descended to the dead? One place is Peter's First Letter, which says:
+
+> For Christ, too, suffered for sins, once and for all, a person who did what is right on behalf of those who don't do what is right, so that he might bring you to God.
+
+> Put to death in the body, he was brought to life in the spirit, in which he went and made proclamation to the spirits in prison.
+
+[1 Peter 3.18-19 USC]
+
+When Jesus died something incredible happened. He went and raided the world of the dead. No one had been able to do this since the beginning. Even the prophets of the Hebrew Bible couldn't get out of that place. But then Jesus turned up. Matthew tells us that when Jesus gave up his spirit,
+
+> The curtain in the Temple sanctuary was split in two from top to bottom; there were earth tremors; rocks were split; tombs were opened, and the bodies of many of God's people who had died were raised to life.
+
+[Matt 27.51-52 USC]
+
+There was a cosmic earthquake when Jesus died. The walls of Jericho came down. Jesus, in the Spirit, raided Hades and brought his people out.
+
+That was the second day, like when Jonah was in the whale.
+
+Once the sun went down the women could prepare the spices and perfume they would take to the tomb in the morning.
+
+## The third day
+
+The next morning two of the Marys at last went to the tomb. (See Matt 28.1.) Piled on top of their grief was frustration at not being able to prepare Jesus' body until now. They were worried too, because they didn't know how they would roll away the big stone covering the entrance. Yet they still went, hoping somehow to be able to do something to dignify the corpse of the one they had so dearly loved.
+
+It was a Sunday, which Hebrews call the first day of the week because the Sabbath is the seventh day. Here is Luke's account again:
+
+> On the first day of the week, very early in the morning, they went to the tomb, carrying the spices they'd prepared. They discovered that the entrance-stone had been rolled away from the tomb, but when they went in, they didn't find the corpse of the Lord Jesus.
+
+[Luke 24.1-3 USC]
+
+This particular Sunday was the beginning of a new existence, a new creation. Just as the whale could not hold down Jonah, Hades could not hold on to Jesus. Jesus had come back from the dead, but no one knew it yet.
+
+There have been some earth shattering events in our life times, but they are nothing compared to what happened that morning. The resurrection of Jesus is the biggest news ever. So who were the first ones to find out?
+
+The first was Mary Magdalene. Why did Jesus decide to make her the first and not someone like Peter or John or James or Andrew? I think the answer to this hard question has something to do with God's beautiful nature. Remember how God said to Jonah, 'Am I not to feel sorry for Nineveh in which there are more than a hundred and twenty thousand people who cannot tell their right hand from their left, to say nothing of the animals?' Here was Mary, who could not see through the tears in her eyes and thought Jesus was the gardener. She asked him to please tell her where they had put her Lord, to which Jesus said, "Mary".
+
+This was the first direct encounter anyone had with the risen Jesus. It was a woman, one who had been demonized, someone many would have counted as the least among his followers. Jesus chose her to be the first witness of his resurrection; he did it personally, using her name. 
+
+The resurrection of Jesus is in a class of its own. The Bible tells us about people like Jairus' daughter and Lazarus who Jesus brought back to life. Those people came back as they had been but eventually died again. However, when Jesus came back to life, he came back in a body that is somehow continuous with the one he died in, but is now glorified and lives forever. He can appear in a locked room, ask for something to eat, and let Thomas touch the marks in his hands and side. This is no ghostly existence. He is at home in both the physical and spiritual realms.
+
+Who was next after Mary Magdalene? According to Luke it was two people who were walking to a place called Emmaus. In those days people were sports nuts just like today and measured distances according to how many stadiums you had to walk to get there. A stadium is 600 feet, which is about 180 metres. Luke tells us that Emmaus was 60 stadia from Jerusalem, which means it was about eleven kilometres. That's about how far it is from here to the hills if you walk directly East. 
+
+These two were walking there on the Sunday, deep in discussion about the recent events. Luke tells us that one of them was named Cleopas. People spelled as they thought best in those days, so this may well be the Clopas whose wife was mentioned before. If the person he's walking with is his wife then she is one of the three Marys mentioned before. That would make these two Jesus' aunty and uncle.
+
+As they walked along Jesus himself caught up and asked what they were talking about. Somehow they didn't recognise him. They just stood there looking sad. They asked him if he was the only person in Jerusalem who didn't know what had happened over the last few days, how the person they thought would set Israel free had just been put to death when the high-priest and rulers handed him over for the death penalty. Then they said how some women found the tomb empty, that others had checked and confirmed it, and even that there were stories of angels saying he is alive.
+
+At this point Jesus began to tell them off. "How dull you are. How slow to believe." Then he explained everything to them using the scriptures how these things had to happen for the Messiah to enter his glory.
+
+They didn't recognize him until they got to Emmaus. It was getting dark and he acted as if he was going to keep going but they begged this stranger to stay with them. Through their hospitality the stranger's true identity was revealed. They recognised him when he took the bread, blessed it, and gave it to them. And then he vanished.
+
+So we come to the end of the three holy days of Easter. Just as in Jonah, God, by his beautiful nature, is happy to choose people we might not expect.
+
+He cares about people who don't know their left from their right, and animals as well. God cares for you too.
+
+May the Lord Jesus bless you and appear to you, early in the morning, on the road, and in your hospitality. May he call you by your first name, and show you that he is the Son of David, the Messiah, Son of the Living God.
+
+Amen.
