Fix Yahoo link.

--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -9,7 +9,7 @@ Christians are meant to be evangelists. That means we are meant to tell people t
 
 If you are like me then you have trouble being an evangelist. I find evangelism hard, like going to the dentist. I know I should do it but I don't want to. I'd rather not go and suffer for fear of what will happen if I do go.
 
-Tonight we will hear about a surprising evangelist and perhaps learn from her how to be a happy gospeller. People [sing about her](https://www.youtube.com/watch?v=OsK-qE_II-k) and the Eastern Orthodox Church even tells us her name, which sounds like *little light*. John tells us about her in chapter four of his Gospel. I will be using Richard Moore's translation, *Under the Southern Cross* (USC) for quotations.^[Richard K. Moore, *Under the Southern Cross: The New Testament in Australian English* (WestBow Press, 2014).]
+Tonight we will hear about a surprising evangelist and perhaps learn from her how to be a happy gospeller. People [sing about her](https://www.youtube.com/watch?v=bBYCPM1Uu1Y) and the Eastern Orthodox Church even tells us her name, which sounds like *little light*. John tells us about her in chapter four of his Gospel. I will be using Richard Moore's translation, *Under the Southern Cross* (USC) for quotations.^[Richard K. Moore, *Under the Southern Cross: The New Testament in Australian English* (WestBow Press, 2014).]
 
 # Going through Samaria
 
