--- a/content/posts/2019-04-20.md
+++ b/content/posts/2019-04-20.md
@@ -39,7 +39,7 @@ That is just the start of Jonah's story. We know that he was swallowed by a whal
 
 [Jonah 4.2 CEV]
 
-Next Jonah made a shelter outside Nineveh and sat watching to see what would happen. A nice shady vine sprung but then it died and Jonah got sun stroke. Jonah told God, "I'm angry enough to die!" Then God replied with these unforgettable words:
+Next Jonah made a shelter outside Nineveh and sat watching to see what would happen. A nice shady vine sprung up but then it died and Jonah got sun stroke. Jonah told God, "I'm angry enough to die!" Then God replied with these unforgettable words:
 
 > You are only upset about a plant which cost you no labour, which you did not make grow, which sprouted in a night and has perished in a night. Am I not to feel sorry for Nineveh in which there are more than a hundred and twenty thousand people who cannot tell their right hand from their left, to say nothing of the animals?
 
@@ -141,13 +141,13 @@ This was the first direct encounter anyone had with the risen Jesus. It was a wo
 
 The resurrection of Jesus is in a class of its own. The Bible tells us about people like Jairus' daughter and Lazarus who Jesus brought back to life. Those people came back as they had been but eventually died again. However, when Jesus came back to life, he came back in a body that is somehow continuous with the one he died in, but is now glorified and lives forever. He can appear in a locked room, ask for something to eat, and let Thomas touch the marks in his hands and side. This is no ghostly existence. He is at home in both the physical and spiritual realms.
 
-Who was next after Mary Magdalene? According to Luke it was two people who were walking to a place called Emmaus. In those days people were sports nuts just like today and measured distances according to how many stadiums you had to walk to get there. A stadium is 600 feet, which is about 180 metres. Luke tells us that Emmaus was 60 stadia from Jerusalem, which means it was about eleven kilometres. That's about how far it is from here to the hills if you walk directly East. 
+Who was next after Mary Magdalene? According to Luke it was two people who were walking to a place called Emmaus. In those days people were sports nuts just like today and measured distances according to how many stadiums you had to walk to get there. A stadium is 600 feet, which is about 180 metres. Luke tells us that Emmaus was 60 stadia from Jerusalem, which means it was about eleven kilometres. That's about how far it is from here to the hills if you walk directly east. 
 
 These two were walking there on the Sunday, deep in discussion about the recent events. Luke tells us that one of them was named Cleopas. People spelled as they thought best in those days, so this may well be the Clopas whose wife was mentioned before. If the person he's walking with is his wife then she is one of the three Marys mentioned before. That would make these two Jesus' aunty and uncle.
 
 As they walked along Jesus himself caught up and asked what they were talking about. Somehow they didn't recognise him. They just stood there looking sad. They asked him if he was the only person in Jerusalem who didn't know what had happened over the last few days, how the person they thought would set Israel free had just been put to death when the high-priest and rulers handed him over for the death penalty. Then they said how some women found the tomb empty, that others had checked and confirmed it, and even that there were stories of angels saying he is alive.
 
-At this point Jesus began to tell them off. "How dull you are. How slow to believe." Then he explained everything to them using the scriptures how these things had to happen for the Messiah to enter his glory.
+At this point Jesus began to tell them off. "How dull you are. How slow to believe." Then he explained everything to them using the scriptures to show how these things had to happen for the Messiah to enter his glory.
 
 They didn't recognize him until they got to Emmaus. It was getting dark and he acted as if he was going to keep going but they begged this stranger to stay with them. Through their hospitality the stranger's true identity was revealed. They recognised him when he took the bread, blessed it, and gave it to them. And then he vanished.
 
