rename to 2020-11-29.md

--- a/content/posts/2020-11-29.md
+++ b/content/posts/2020-11-29.md
@@ -1,29 +1,30 @@
 ---
 title: "For those who trust him"
-place: Rockingham Uniting Church
 output:
   html_document:
     df_print: paged
   word_document: default
-date: '2020-11-30'
+date: '2020-11-29'
 ---
 
-## Isaiah 64.1-8
+## Isaiah 64
 
-One of today's lectionary readings is from Isaiah chapter 64. It starts like this:
+Today's reading is from Isaiah chapter 64:
 
-| Oh that you would tear the heavens open and come down
-| --at your Presence the mountains would melt,
-| as fire sets brushwood alight,
-| as fire causes water to boil--
-| to make known your name to your enemies,
-| and make the nations tremble at your Presence,
-| working unexpected miracles
-| such as no one has ever heard of before.
-| No ear has heard,
-| no eye has seen
-| any god act like this
-| for those who trust him.
+```
+Oh that you would tear the heavens open and come down
+--at your Presence the mountains would melt,
+as fire sets brushwood alight,
+as fire causes water to boil--
+to make known your name to your enemies,
+and make the nations tremble at your Presence,
+working unexpected miracles
+such as no one has ever heard of before.
+No ear has heard,
+o eye has seen
+any god act like this
+for those who trust him.
+```
 
 [Is 64.1-4, Jerusalem Bible (JB)]
 
@@ -33,11 +34,11 @@ We believe that God *has* torn the heavens open and come down. He has come down 
 
 Jesus told us that if we had faith we could move mountains. He lit a fire that continues to burn. Nations are shaken by his presence -- he has turned the world upside down. Through those who trust him, he has done things never seen or heard of before.
 
-But to which of his enemies did he make his name known? Does the name *Saul of Tarsus* ring a bell? We know him better as *Paul*. After being an enemy of the early Christian movement, Paul became an advocate. He went from city to city telling people the Good News about Jesus Christ.
+But to which of his enemies did he make his name known? Does the name *Saul of Tarsus* ring a bell? We know him better as *Paul*. After being an enemy of the early Christian movement, Paul became an advocate, telling people the Good News about Jesus Christ.
 
 At the centre of the Good News that Paul preached is a doctrine called *justification by faith*. Unfortunately, this phrase doesn't mean a lot to most people. If you walked up to some people and said *I am justified by faith* they would probably look at you funny.
 
-A man who lives in Perth wrote a big book on what Paul means by this phrase, how the doctrine has developed over the last two thousand years, and how the key words are translated in English translations of the original Greek. The man's name is Richard K. Moore. He taught New Testament when I was at Bible college and then suffered a great trial as my PhD supervisor. In his view, it is better to translate the key words with something based on the word *right* instead of the word *just*. Here is how Richard translates a central passage from Paul's letter to the Romans:
+A man who lives in Perth wrote a three volume book on what Paul means by this phrase, how the doctrine has developed over the last two thousand years, and how the key words are translated in English translations of the original Greek. The man's name is Richard K. Moore. He taught New Testament when I was at Bible college and then suffered a great trial as my PhD supervisor. In his view, it is better to translate the key words with something based on the word *right* instead of the word *just*. Here is how Richard translates a central passage from Paul's letter to the Romans:
 
 > Now, however, quite apart from the Law, the way to a right relationship with God, attested to by the Law and the Prophetic Writings, has come to light, a right relationship with God through faith in Jesus Christ for *all* who have faith. For there isn't any difference: since *all* have sinned and fall short of God's glory, they are brought into a right relationship freely, by his grace, through the liberation purchased by Jesus Christ. [Rom 3.21-24, Under the Southern Cross (USC)]
 
@@ -51,9 +52,9 @@ In short, no. All of those things are admirable aspirations but they are not the
 
 The rightness of God, the rightness that comes from God, is a gift. It is a thing that God gives us when we rely on Him. We obtain it by faith.
 
-So what is faith, and are there any examples to give us a better understanding of it? The Greek word sounds funny: ΠΙϲΤΙϲ (*pistis*). It is variously translated as *faith*, *belief* or *trust*. So we obtain the rightness of God by believing Him, by trusting Him. Maybe an even better way to translate it is *reliance*. We put our faith in God, not our own efforts. We believe in God's power, not our own ability. We trust in God, not anyone or anything else. We rely on God to make us right in the same way that we rely on a chair to hold us up or the ground not to give way when we walk on it. The rightness that comes from God is a gift. It is not something that can be earned, but it can be received.
+So what is faith, and are there any examples to give us a better understanding of it? The Greek word sounds funny: πιϲτιϲ (*pistis*). It is variously translated as *faith*, *belief* or *trust*. So we obtain the rightness of God by believing Him, by trusting Him. Maybe an even better way to translate it is *reliance*. We put our faith in God, not our own efforts. We believe in God's power, not our own ability. We trust in God, not anyone or anything else. We rely on God to make us right in the same way that we rely on a chair to hold us up. The rightness that comes from God is a gift. It is not something that can be earned, but it can be received.
 
-Is there a good biblical example of the rightness that comes from God? Paul thinks so and he gives us one immediately after the passage we just heard. Paul's example is Abraham, the father of the Hebrew nation.
+Is there a good biblical example of the rightness that comes from God? Paul thinks so and he gives us one immediately after the passage from Romans that we heard before. Paul's example is Abraham, the father of the Hebrew nation.
 
 When you think about Abraham, what things stand out to you?
 
@@ -83,7 +84,7 @@ That is how Jesus made his name known to his enemy, Saul. Saul, who we know as P
 
 What is this Good News that Paul preached? As Paul says at the beginning of Galatians, it is that the Lord Jesus Christ sacrificed himself for our sins in order to rescue us from this present wicked world, in accordance with the will of God our Father, to whom be glory for ever and ever. Amen. [Gal 1.3-5, JB, adapted]
 
-Isaiah prophesied, *Oh that you would tear the heavens open and come down to make known your name to your enemies.* God has done exactly that. When John the Baptist saw Jesus he said, *Behold the lamb of God who takes away the sin of the world.* John the Baptist baptized Jesus and, as Mark tells us, *No sooner had he come up out of the water than he saw the heavens torn apart and the Spirit, like a dove, descending on him.* [Is 64.1, Jn 1.29, Mk 1.10]
+Isaiah prophesied, *Oh that you would tear the heavens open and come down to make known your name to your enemies.* God has done exactly that. When John the Baptist saw Jesus he said, *Behold the lamb of God who takes away the sin of the world.* John the Baptist baptized Jesus and, as Mark tells us, *No sooner had he come up out of the water than he saw the heavens torn apart and the Spirit, like a dove, descending on him.* [Is 64.1, Jn 1.29, Mk 1.10, JB]
 
 Jesus is the way God makes things right. This is the radical message revealed to Paul by the risen Christ. Let's give Paul the last word today with more from his letter to the Galatians:
 
