--- a/content/posts/2020-11-29.md
+++ b/content/posts/2020-11-29.md
@@ -21,7 +21,7 @@ and make the nations tremble at your Presence,
 working unexpected miracles
 such as no one has ever heard of before.
 No ear has heard,
-o eye has seen
+no eye has seen
 any god act like this
 for those who trust him.
 ```
