--- a/content/posts/2020-11-29.md
+++ b/content/posts/2020-11-29.md
@@ -46,13 +46,13 @@ We are made right with God through faith.
 
 Let's hear that again. *We are made right with God through faith.*
 
-How can this be? Shouldn't it be, *We are made right with God through obeying the ten commandments*? Or shouldn't it be, *We are made right with God by never doing anything our conscience condemns us for*? Or shouldn't it be, *We are made right with God by repenting of our sins and not doing the wrong thing any more*?
+How can this be? Shouldn't it be, *We are made right with God through obeying the ten commandments*? Or, *We are made right with God by repenting of our sins and not doing the wrong thing any more*?
 
-In short, no. All of those things are admirable aspirations but they are not the basis of getting right with God. They are things that go with the rightness that comes from God, but they are not *how* we get right with God.
+In short, no. Those things are admirable but they are not the basis of a right relationship with God. They are things that go with the rightness that comes from God, but they are not *how* we get right with God.
 
 The rightness of God, the rightness that comes from God, is a gift. It is a thing that God gives us when we rely on Him. We obtain it by faith.
 
-So what is faith, and are there any examples to give us a better understanding of it? The Greek word sounds funny: πιϲτιϲ (*pistis*). It is variously translated as *faith*, *belief* or *trust*. So we obtain the rightness of God by believing Him, by trusting Him. Maybe an even better way to translate it is *reliance*. We put our faith in God, not our own efforts. We believe in God's power, not our own ability. We trust in God, not anyone or anything else. We rely on God to make us right in the same way that we rely on a chair to hold us up. The rightness that comes from God is a gift. It is not something that can be earned, but it can be received.
+So what is faith, and are there any examples to give us a better understanding of it? The Greek word sounds funny: πιϲτιϲ (*pistis*). It is variously translated as *faith*, *belief* or *trust*. So we obtain the rightness of God by believing Him, by trusting Him. Maybe an even better way to translate it is *reliance*. We put our faith in God, not our own efforts. We believe in God's power, not our own ability. We trust in God, not ourselves. We rely on God to bring us into a right relationship in the same way that we rely on a chair to hold us up. The rightness that comes from God is a gift. It is not something that can be earned, but it can be received.
 
 Is there a good biblical example of the rightness that comes from God? Paul thinks so and he gives us one immediately after the passage from Romans that we heard before. Paul's example is Abraham, the father of the Hebrew nation.
 
@@ -66,11 +66,13 @@ Or, as it says somewhere else,
 
 > Abraham believed God and it was credited to him as righteousness. [Gal 3.6 NIV, quoting Gen 15.6]
 
-This is radical. The basis of a right relationship with God is believing what God promises, not blamelessness in the sight of the law.
+This is radical. The basis of a right relationship with God is believing what God promises, not blamelessness in the sight of the Law.
 
-And what does God promise? For Abraham it was a promise that his descendants would inherit the earth. In Paul's thinking, everything else about Abraham is a manifestation of the thing that made Abraham right with God -- belief in a God who is able to do what He promises, a God who is more powerful than death.
+And what does God promise? For Abraham it was a promise that all of the tribes of earth would be blessed through him [Gen 12.3]. In Paul's thinking, everything else about Abraham is a manifestation of the thing that made Abraham right with God -- belief in a God who is able to do what He promises. The episode of Isaac on Mount Moriah contains an example of Abraham's trust in God, even in the face of deadly circumstances:
 
-Paul is better qualified than most to speak on this topic. After all, he had been a Pharisee, and described himself as a Hebrew of Hebrews. He must have thought deeply about how wrong he had been about the way to be right with God. His former understanding made him zealous for the things of God. However, it also brought him to the point of persecuting the Messiah.
+> Isaac spoke to his father Abraham, 'Father' he said. 'Yes, my son' he replied. 'Look,' he said 'here are the fire and the wood, but where is the lamb for the burnt offering?' Abraham answered, 'My son, God himself will provide the lamb for the burnt offering.' [Gen 22.7-8, JB]
+
+Paul is better qualified than most to speak on the topic of how to be right with God. After all, he had been a Pharisee, and described himself as a Hebrew of Hebrews. He must have thought deeply about how wrong he had been about the way to be right with God. His former understanding made him zealous for the things of God. However, it also brought him to the point of persecuting the Messiah.
 
 > Saul, Saul, Why are you persecuting me?
 
@@ -78,7 +80,7 @@ Paul is better qualified than most to speak on this topic. After all, he had bee
 
 > I am Jesus, and you are persecuting me. [Acts 9.4-5, JB]
 
-That is how Jesus made his name known to his enemy, Saul. Saul, who we know as Paul, went through what you might call a paradigm shift. He talks about it in Galatians:
+That is how Jesus made his name known to his enemy, Saul, who we know as Paul. Paul went through what you might call a paradigm shift. He talks about it in Galatians:
 
 > The fact is, and I want you to realise this, the Good News I preach is not a human message given by men, it is something I learnt only through a revelation of Jesus Christ. You must have heard of my career as a practising Jew, how merciless I was in persecuting the Church of God, how much damage I did to it, how I stood out among the Jews of my generation, and how enthusiastic I was for the traditions of my ancestors. Then God, who had specially chosen me while I was still in my mother's womb, called me through his grace and chose to reveal his Son in me, so that I might preach the Good News about him to the pagans. [Gal 1.11-16, JB]
 
