Tweak 2020-11-29.md again

--- a/content/posts/2020-11-29.md
+++ b/content/posts/2020-11-29.md
@@ -38,7 +38,7 @@ But to which of his enemies did he make his name known? Does the name *Saul of T
 
 At the centre of the Good News that Paul preached is a doctrine called *justification by faith*. Unfortunately, this phrase doesn't mean a lot to most people. If you walked up to some people and said *I am justified by faith* they would probably look at you funny.
 
-A man who lives in Perth wrote a three volume book on what Paul means by this phrase, how the doctrine has developed over the last two thousand years, and how the key words are translated in English translations of the original Greek. The man's name is Richard K. Moore. He taught New Testament when I was at Bible college and then suffered a great trial as my PhD supervisor. In his view, it is better to translate the key words with something based on the word *right* instead of the word *just*. Here is how Richard translates a central passage from Paul's letter to the Romans:
+A man who lives in Perth wrote a three volume book on what Paul means by this phrase, how the doctrine has developed over the last two thousand years, and how the key words are translated in English translations of the original Greek. The man's name is Richard K. Moore. He taught New Testament and I was fortunate to sit under his teaching. (He suffered a great trial as my PhD supervisor.) In his view, it is better to translate the key words with something based on the word *right* instead of the word *just*. Here is how Richard translates a central passage from Paul's letter to the Romans:
 
 > Now, however, quite apart from the Law, the way to a right relationship with God, attested to by the Law and the Prophetic Writings, has come to light, a right relationship with God through faith in Jesus Christ for *all* who have faith. For there isn't any difference: since *all* have sinned and fall short of God's glory, they are brought into a right relationship freely, by his grace, through the liberation purchased by Jesus Christ. [Rom 3.21-24, Under the Southern Cross (USC)]
 
